css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
    --Grey-Tint2: #D9D9D9;
    --white-color: #fff;
}

.icon-blue {
    color: var(--main-color);
}

.neutral-star {
    color: var(--main-bg-color)
}

body {
    display: flex;
    justify-content: center;
    margin: 0;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.euro {
    font-weight: 700;
}

h1 {
    font-size: 22px;
    margin: 0;
}

h2 {
    font-size: 18px;
    margin: 0;
}

h3 {
    font-size: 16px;
    margin: 0;
}

.card p,
.cards p {
    font-size: 14px;
}

/****** Header ***********/

header {
    width: 100%;
    height: 79px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 30px;
}

header img {
    width: 65px;
    margin: 30px 0;
}

header .navbar {
    height: 50%;
    display: flex;
    gap: 68px;
}

header .navbar a {
    height: 100%;
    display: flex;
    align-items: end;
    border-top: solid 2px transparent;
}

header .navbar a:hover {
    border-top: solid 2px var(--main-color);
    color: var(--main-color);
}




/* Groupe d'information */

.info-group {
    margin-bottom: 35px;
    display: flex;
    flex-direction: column;
    gap: 35px;
}



/* Titles */

.titles {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.titles h1,
.titles p {
    margin: 0;
}



 /* Barre de recherche  */

form {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 24px;
    width: 377px;
    height: 49px;
    overflow: hidden;
    border: solid 1px var(--main-bg-color);
    border-radius: 15px;
}

form .search-icon {
    height: 50px;
    width: 49px;
    background-color: var(--main-bg-color);
    border: solid 1px var(--main-bg-color);
    border-radius: 15px 0px 0px 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

form input,
input::placeholder {
    border: none;
    padding: 0;
    width: 147px;
    height: 21px;
    outline: none;
    color: black;
    font-size: 18px;
    font-weight: 700;
    box-sizing: border-box;
    background-color: var(--white-color);
}

form .txt-button {
    width: 132px;
    height: 49px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 0 15px 15px 0;
    border: solid 1px var(--main-color);
    background-color: var(--main-color);
    padding: 15px 16px;
    color: var(--main-bg-color);
    font-size: 18px;
    font-weight: 700;
}

form .txt-button:hover {
    cursor: pointer;
}

/* Supprimer la petite croix de suppression dans le champ de recherche */
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-clear-button {
  -webkit-appearance: none;
  appearance: none;
  display: none;
}

form .glass-button {
    display: none;
}


 
 /* Barre de filtres */


 .filter-bar,
 .choice {
    display: flex;
    justify-content: flex-start;
    gap: 15px;
}

.filter-bar .title-filter {
    font-family: Raleway;
    font-weight: 700;
    margin: 0;
    display: flex;
    align-items: center;
}

.filter-bar .choice {
    display: flex;
    text-decoration: none;
}

.filter-bar .choice p {
    font-size: 17px;
    font-weight: 700;
    margin: 0;
}

.filter-bar .choice  a {
    text-decoration: none;
    color: black;
    border-radius: 30px;
    border: 2px solid var(--Grey-Tint2);
    padding: 4px 19px;
    height: 50px;
    display: flex;
    align-items: center;
}

.filter-bar .choice i {
    padding-right: 10px;
    font-size: 22px;
}

.filter-bar .choice a:hover {
    background: var(--filter-bg-color);
}




 /* Barre d'informations */

 .infobar {
    display: flex;
    justify-content: flex-start;
    gap: 10px;
 }

 /* .infobar img {
    margin-right: 10px;
 } */

.infobar p {
    font-size: 16px;
    font-weight: 400;
    margin: 0;
 }



 

/****** Hebergements And Populaires ***********/

.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
    margin-bottom: 35px;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

.hebergements-and-populaires p {
    font-size: 14px;
}

/****** Hebergements ***********/

.hebergements {
    width: 65%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.heberg-cards {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
    box-sizing: border-box;
}
 
.heberg-cards a {
    border-radius: 20px;
    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.10);
    background-color: var(--white-color);
}

a .cards {
    width: 100%;
    height: 100%;
}

.cards img {
    width: 100%;
    height: 124px;
    object-fit: cover;
    box-sizing: border-box;
    padding: 5px 5px 9px 5px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.heberg-cards p {
    margin: 0;
}

.cards .cards-content {
    display: flex;
    flex-direction: column;
    gap: 8px;
    margin: 0 15px 15px 15px;
}

.cards-content .cards-txt {
    display: flex;
    flex-direction: column;
    gap: 8px;
    width: 100%;
    height: 100%;
}




/****** Populaires ***********/

.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
    background-color: var(--white-color);
    border-radius: 20px;
    padding: 5px;
    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.10);
}

.populaires-cards img {
    object-fit: cover;
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}



/* Activités à Marseille */

.section-activites {
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding: 30px;
    margin-bottom: 35px;
}

.stock-cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
}

.card-act img {
    object-fit: cover;
    width: 100%;
    height: 380px;
    border-radius: 20px 20px 0px 0px;
} 

.stock-cards a {
    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.10);
    border-radius: 20px;
}

.name-act {
    margin: 0;
    padding: 20px 19px;
}



/* Footer */

footer {
    display: flex;
    background-color: var(--main-bg-color);
    padding: 30px;
}

.a-propos,
.nos-heberg,
.assist {
    display: flex;
    flex-direction: column;
    gap: 15px;
    /* padding: 20px; */
    width: 100%;
}








/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/

/* Medium devices (tablets, less/equal than 1024px) */

@media (max-width: 1024px) {

    .hebergements-and-populaires {
        flex-direction: column;
        gap: 50px;
    }

    .hebergements,
    .populaires {
        width: 100%;
    }

    .populaires {
        display: flex;
        flex-direction: column;
        gap: 20px;
    }
    
    .populaires .populaires-cards {
        display: grid;
        grid-template-columns: 2fr 2fr 2fr;
        gap: 20px;
    }

    .populaires-cards .card {
        margin: 0;
    }

    .heberg-cards .cards a {
        width: 30%;
        height: auto;
    }

    .card-act img {
        height: 200px;
    }
    
    .filter-bar {
        display: flex;
        flex-direction: column;
        gap: 20px;
    }

    .filter-bar .choice p {
        font-size: 16px;
    }

    .filter-bar .choice  a {
        padding: 4px 19px;
        height: 50px;
    }

    footer {
        gap: 30px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* Globale */

    * {
        margin: 0;
        box-sizing: border-box;
    }
    
    .main-container {
        margin: 0;
        padding: 0;
    }

    /* Responsive partie Header */

    header {
        flex-direction: column;
        align-items: center;
        height: auto;
    }

    header img {
        margin: 20px;
        padding: 0;
    }

    header .navbar {
        width: 100%;
        height: auto;
        gap: 0;
        box-sizing: border-box;
    }

    .navbar a {
        display: flex;
        justify-content: space-around;
    } 

    header .navbar a:hover {
        border-top: none;
    }

    .navbar .nav-heberg,
    .navbar .nav-act {
        width: 100%;
        padding-bottom: 15px;
        box-sizing: border-box;
        border-bottom: solid 3px var(--main-bg-color);
    }

    .nav-heberg:hover,
    .nav-act:hover {
        border-bottom: solid 3px var(--main-color);
        color: var(--main-color);
    }

    /* Responsive partie Main */

    main .info-group {
        padding: 0 20px;
        gap: 35px;
        /* align-items: center; */
    }

    .titles {
        gap: 8px;
        align-items: flex-start;
    }

    .titles h1 {
        font-size: 22px;
    }

    .titles p {
        font-size: 16px;
    }



    /* Barre de recherche */

    form {
        display: flex;
        width: 100%;
        border-radius: 20px;
        overflow: visible;
    }

    form .txt-button {
        display: none;
    }

    form .glass-button {
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: var(--main-color);
        border: solid 1px var(--main-color);
        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
        border-radius: 15px;
        width: 49px;
        height: 49px;
    }

    form .glass-button i {
        color: var(--white-color);
    }

    .glass-button:hover {
        cursor: pointer;
    }


    

    /* Barre de filtres */

    .filter-bar {
        flex-direction: column;
    }

    .filter-bar .choice {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        width: 100%;
        height: 125px;
        gap: 10px;
    }

    .filter-bar .choice p {
        font-size: 14px;
    }


    .filter-bar .choice a {
        display: flex;
        justify-content: center;
    }



    /* Hébergement and populaires */

    .hebergements-and-populaires {
        flex-direction: column-reverse;
        gap: 15px;
    }

    .hebergements-and-populaires section {
        border-radius: 0;
    }

    .hebergements-and-populaires .populaires {
        margin: 0;
        padding: 30px 20px;
        gap: 15px;
    }

    .hebergements-and-populaires .hebergements {
        margin: 0;
        gap: 15px;
        background-color: var(--white-color);
        padding: 20px;
    }

    .populaires .populaires-cards,
    .hebergements .heberg-cards {
        display: flex;
        flex-direction: column;
        gap: 15px;
    }


    /* Activités */

    .section-activites {
        display: flex;
        flex-direction: column;
        gap: 30px;
    }

    .section-activites .stock-cards {
        display: flex;
        flex-direction: column;
        gap: 15px;
    }


    /* Footer */

    footer {
        flex-direction: column;
        gap: 50px;
    }
}

